09-NEW-ELB-Application-LoadBalancers/09-08-NameBasedVirtualHost-Routing/kube-manifests/03-Nginx-App3-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-nginx-deployment
  labels:
    app: app3-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
      - name: app3-nginx
        image: stacksimplify/kubenginx:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-nodeport-service
  labels:
    app: app3-nginx
  annotations:
    alb.ingress.kubernetes.io/healtcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: app3-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
